# pyflowetl_repo

./: CLAUDE.md  README.md  pyproject.toml
src/pyflowetl/: __init__.py  log.py  pipeline.py
src/pyflowetl/data/: gi_comuni_cap.csv  ips.csv
src/pyflowetl/extractors/: __init__.py  clickhouse_extractor.py  csv_extractor.py  postgres_extractor.py  xlsx_extractor.py
src/pyflowetl/loaders/: __init__.py  clickhouse_loader.py  csv_loader.py  duckdb_loader.py  parent_child_upsert.py  postgres_loader.py  xlsx_loader.py
src/pyflowetl/preprocessors/: __init__.py  nan_to_empty_string.py  normalize_phone.py  padding_preprocessor.py  text_replace.py  to_lower.py  to_upper.py
src/pyflowetl/transformers/: __init__.py  add_cap_from_comune.py  add_comune_from_cap.py  add_constant_column.py  add_provincia.py  add_provincia_regione_from_cap.py  add_random_ip.py  add_random_string.py  add_ranom_date.py  add_regione.py  add_regione_from_sigla.py  apply_preprocessing_rules.py  clean_comune.py  coalesce.py  codice_fiscale_details.py  concat_columns.py  convert_date_format.py  custom_sql_filter.py  date_shift_transformer.py  distinct.py  drop_columns.py  extract_cap_from_address.py  filter.py  log_head.py  only_mobile.py  remove_duplicates.py  set_output_columns.py  split_address.py  split_name.py  text_replace.py  to_lower.py  to_upper.py  validate_columns.py
src/pyflowetl/utils/: __init__.py  string_cleaner.py
src/pyflowetl/validators/: __init__.py  base.py  codice_fiscale.py  column_comparison.py  date_format.py  is_email.py  not_empty.py  partia_iva.py  regex.py  telefono_italiano.py
