[project]
name = "pyflowetl"
version = "1.1.5"
description = "Un framework ETL modulare e leggibile in Python"
authors = [
    { name = "Marco Zamparelli", email = "marco.zamparelli@libero.it" }
]
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }

dependencies = [
    "pandas",
    "openpyxl",
    "psutil",
    "duckdb",
    "metaphone",
    "rapidfuzz",
    "sqlalchemy",
    "psycopg2",
    "chardet",
    "setuptools",
    "cleanco",
    "nameparser",
    "spacy",
    "unidecode",
    "requests",
    "clickhouse-driver>=0.2.10",
    "pandas-stubs~=2.3.3",
]

[project.urls]
Homepage = "https://github.com/valek77/pyflowetl_repo"
Repository = "https://github.com/valek77/pyflowetl_repo"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyflowetl = ["data/*.csv"]
